--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
         "node": "0.10.35"
     },
     "dependencies": {
-        "express": "4.10.6",
-        "serve-favicon": "2.2.0"
+        "express": "^4.17.1",
+        "serve-favicon": "^2.5.0"
     },
     "bugs": {
         "url": "https://github.com/patrickroberts/music-js/issues"
